k8s/uit-wiki-be/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uit-wiki-be
spec:
  rules:
    - host: wikichatbot.uit.io.vn
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: uit-wiki-be
                port:
                  number: 3000
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: auth-http
                port:
                  number: 3005
